--- a/index.html
+++ b/index.html
@@ -12,6 +12,13 @@
   </head>
   <body>
     <div class="fixed text-white text-sm ml-2 mt-1 select-none"><span>Score:</span> <span id="scoreEl">0</span></div>
+    <div class="fixed inset-0 flex items-center justify-center" id="modalEl">
+      <div class="bg-white max-w-md w-full p-6 text-center">
+        <h1 class="text-4xl font-bold leading-none" id="bigScoreEl">0</h1>
+        <p class="text-sm text-gray-700 mb-4">Points</p>
+        <button class="bg-blue-500 text-white w-full py-3 rounded-full text-sm" id="startGameBtn">Start Game</button>
+      </div>
+    </div>
     <canvas></canvas>
     <script
       src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.5.1/gsap.min.js"
