--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <div class="fixed inset-0 flex items-center justify-center" id="modalEl">
       <div class="bg-white max-w-md w-full p-6 text-center">
         <h1 class="text-4xl font-bold leading-none" id="bigScoreEl">0</h1>
-        <p class="text-sm text-gray-700 mb-4">Points</p>
+        <p class="text-sm text-gray-700 mb-4">points</p>
         <button class="bg-blue-500 text-white w-full py-3 rounded-full text-sm" id="startGameBtn">Start Game</button>
       </div>
     </div>
