--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     />
   </head>
   <body>
-    <div class="fixed text-white text-sm ml-2 mt-1 select-none"><span>Score:</span> <span id="scoreEl">0</span></div>
+      <div class="score"><span>Score:</span> <span id="scoreEl">0</span></div>
     <div class="fixed inset-0 flex items-center justify-center" id="modalEl">
       <div class="bg-white max-w-md w-full p-6 text-center">
         <h1 class="text-4xl font-bold leading-none" id="bigScoreEl">0</h1>
