--- a/index.html
+++ b/index.html
@@ -5,23 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
     <link rel="stylesheet" href="style.css" />
-    <link
-      rel="stylesheet"
-      href="https://unpkg.com/tailwindcss@^1.0/dist/tailwind.min.css"
-    />
   </head>
   <body>
     <div class="score"><span>Score:</span> <span id="scoreEl">0</span></div>
       <div class="modal" id="modalEl">
-      <div class="bg-white max-w-md w-full p-6 text-center">
-        <h1 class="text-4xl font-bold leading-none" id="bigScoreEl">0</h1>
-        <p class="text-sm text-gray-700 mb-4">points</p>
-        <button
-          class="bg-blue-500 text-white w-full py-3 rounded-full text-sm"
-          id="startGameBtn"
-        >
-          Start Game
-        </button>
+        <div class="modal-content">
+        <h1 class="modal-score" id="modalScoreEl">0</h1>
+        <p>points</p>
+        <button class="start-button" id="startButtonEl">Start Game</button>
       </div>
     </div>
     <canvas></canvas>
